--- a/index.html
+++ b/index.html
@@ -1,4 +1,19 @@
 <!DOCTYPE html>
+<!--
+ __        __    _ _    _               _          _   _            __  __                   
+ \ \      / /_ _| | | _(_)_ __   __ _  | |_ ___   | |_| |__   ___  |  \/  | ___   ___  _ __  
+  \ \ /\ / / _` | | |/ / | '_ \ / _` | | __/ _ \  | __| '_ \ / _ \ | |\/| |/ _ \ / _ \| '_ \ 
+   \ V  V / (_| | |   <| | | | | (_| | | || (_) | | |_| | | |  __/ | |  | | (_) | (_) | | | |
+    \_/\_/ \__,_|_|_|\_\_|_| |_|\__, |  \__\___/   \__|_| |_|\___| |_|  |_|\___/ \___/|_| |_|
+                                |___/                                                        
+                             ╔═╗  ╔═╗╔═╗╔╦╗╔═╗  ╔═╗╔═╗╦═╗╔╦╗     
+                        ───  ╠═╣  ║ ╦╠═╣║║║║╣   ╠═╝╠═╣╠╦╝ ║   ───
+                             ╩ ╩  ╚═╝╩ ╩╩ ╩╚═╝  ╩  ╩ ╩╩╚═ ╩      
+
+  A game part(prototype) of the project Walking to the Moon.
+   Written by Jaewoong Hwang(http://jaewoong.info)
+    April 2014
+//-->
 <html>
 <head>
 	<title>Walking to the Moon -- the game part</title>
