--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<script src="./js/Box2dWeb-2.1.a.3.min.js"></script>
 	<script src="./js/box2d4Easeljs.js"></script>
+	<script src="./js/rigidbody.js"></script>
 	<script src="./js/easeljs-0.7.1.min.js"></script>
 	<!-- <script src="./js/easeljs_cocoonjs_touchfix.js"></script> //-->
 	<script src="./js/assetfactory.js"></script>
