added animated player

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script src="./js/box2d4Easeljs.js"></script>
 	<script src="./js/rigidbody.js"></script>
 	<script src="./js/easeljs-0.7.1.min.js"></script>
-	<!-- <script src="./js/easeljs_cocoonjs_touchfix.js"></script> //-->
+	<script src="./js/easeljs_cocoonjs_touchfix.js"></script>
 	<script src="./js/assetfactory.js"></script>
 	<script src="./js/basicgesture.js"></script>
 	<script src="./js/game.js"></script>
