--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
 <head>
 	<title>Walking to the Moon -- the game part</title>
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<script src="./js/moremath.js"></script>
 	<script src="./js/Box2dWeb-2.1.a.3.min.js"></script>
 	<script src="./js/box2d4Easeljs.js"></script>
 	<script src="./js/easeljs-0.7.1.min.js"></script>
-	<script src="./js/easeljs_cocoonjs_touchfix.js"></script>
+	<!-- <script src="./js/easeljs_cocoonjs_touchfix.js"></script> //-->
 	<script src="./js/assetfactory.js"></script>
 	<script src="./js/basicgesture.js"></script>
 	<script src="./js/rigidbody.js"></script>
-	<script src="./js/enemy.js"></script>
+	<script src="./js/gameobject.js"></script>
+	<script src="./js/gamestage.js"></script>
 	<script src="./js/game.js"></script>
 </head>
 </html>
